fixed spacing

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ ul {
 }
 
 /* Scrollspy */
-#about, #portfolio, #contact {
+#about, #contact {
 	position: relative;
 	margin-top: 150px;
 	padding-top: 80px;
@@ -36,10 +36,6 @@ ul {
 #tech-header, #apps-header {
 	color: #007BFF;
 	font-weight: bold;
-}
-
-#bio {
-	margin-bottom: 200px;
 }
 
 .tech-stack {
